# curso-fastapi

./: .env  Dockerfile  docker-compose.yml  pyproject.toml
app/: main.py
app/db/: models.py
app/migrations/: env.py
app/migrations/versions/: b11bcfdddf03_add_categories_table.py  b489ee1a09d7_add_users_table.py  c02c6941e7f5_add_products_table.py
app/routes/: category_routes.py  product_routes.py
app/schemas/: base.py  category.py  product.py  user.py
app/test/: conftest.py
app/test/routes/: test_category_routes.py  test_product_routes.py  teste_product_routes.py
app/test/schemas/: test_category_schema.py  test_product_schema.py  test_user_schema.py
app/test/use_case/: test_category_use_cases.py  test_product_use_cases.py  test_user_use_cases.py
app/use_cases/: category.py  product.py  user.py
